--- a/CarND-LaneLines-P1/P1.ipynb
+++ b/CarND-LaneLines-P1/P1.ipynb
@@ -734,9 +734,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda env:carnd]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-carnd-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -748,7 +748,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
